--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "url": "https://github.com/mattmur/rdio-spotify-artistfollow"
   },
   "dependencies": {
-    "express" : "4.9.5",
-    "rdio" : "1.5.2",
-    "spotify-web-api-node" : "1.0.2"
+    "express": "4.9.5",
+    "open": "0.0.5",
+    "rdio": "^3.1.0",
+    "spotify-web-api-node": "1.0.2",
+    "timeout-after": "0.0.3"
   }
 }
