--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "express": "4.9.5",
+    "jade": "^1.11.0",
     "open": "0.0.5",
     "rdio": "^3.1.0",
     "spotify-web-api-node": "^2.1.0",
